@@ -1,3 +1,13 @@
+2012-06-14  Yong Li  <yoli@rim.com>
+
+        [BlackBerry] Implement computeRAMSize for QNX
+        https://bugs.webkit.org/show_bug.cgi?id=89110
+
+        Reviewed by Rob Buis.
+
+        * wtf/RAMSize.cpp:
+        (WTF::computeRAMSize):
+
 2012-06-14  Geoffrey Garen  <ggaren@apple.com>
 
         ARMv7 should support spinlocks
